logging work started